[package]
name = "rainbow-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dirs = "5.0.1"
futures = "0.3.28"
highlighter = "0.1.1-alpha"
open = "4.1.0"
rand = "0.8.5"
rlua = "0.19.4"
sdl2 = "0.35.2"
