[package]
name = "rainbow-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dirs = "5.0.1"
highlighter = "0.1.1-alpha"
rand = "0.8.5"
rlua = { version = "0.19.4", features = ["lua-no-oslib"] }

[target.'cfg(target_family="windows")'.dependencies]
sdl2 = "0.35.2"
[target.'cfg(target_family="unix")'.dependencies]
sdl2 = "0.35.2"

[target.'cfg(target_family="wasm")'.dependencies]
getrandom = { features = ["js"] }
wee_alloc = { version = "0.4.5" }
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"